# SIV-ROS-Submissions

./: README.md
Assignment/: README.md
Assignment-1/221232_YuvalBansal/: README.md
Assignment-1/221232_YuvalBansal/IMU/: README.md
Assignment-1/221232_YuvalBansal/src/catkin_ws/src/image_processes/: package.xml
Assignment-1/221232_YuvalBansal/src/catkin_ws/src/image_processes/launch/: image_cropping.launch
Assignment-1/221232_YuvalBansal/src/catkin_ws/src/image_processes/scripts/: webcam_cropper.py  webcam_publisher.py
Assignment/src/catkin_ws/src/image_processes/: CMakeLists.txt
Assignment/src/catkin_ws/src/image_processes/scripts/: webcam_viewer.py
IMU/: MPU6050_and_HMC5883L_Connection_with_Arduino.ino  README.md
