<?xml version="1.0"?>
<package format="2">
  <name>image_processes</name>
  <version>0.0.0</version>
  <description>The image_processes package</description>
  <author email="yuvalbansal2005.yb@gmail.com">Yuval Bansal</author>
  <maintainer email="yuvalbansal2005.yb@gmail.com">Yuval Bansal</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
